# chatbot-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/: config.py  main.py
app/application/entrypoints/: api.py  chat.py  index.py  introspections.py
app/application/entrypoints/dependencies/: agent.py  static.py  storage.py
app/application/entrypoints/schema/: chat_message.py
app/application/entrypoints/schema/introspections/: health.py
app/application/static/: chat_app.ts  index.html
app/domain/models/: chat_message.py
app/infrastructure/database/: base.py
app/infrastructure/database/repository/: chat_message.py
app/infrastructure/logging/: config.py
migrations/: env.py
migrations/versions/: 3701c1bcaa7a_init.py  ad13c5693018_init.py
tests/: conftest.py
tests/functional/entrypoints/: conftest.py  test_index.py  test_introspections.py
tests/unit/application/dependencies/: test_static.py
